=== HEAD

* Add the Model.to_hash dataset method (jeremyevans)

=== 2.1.0 (2008-06-17)

* Break association add_/remove_/remove_all_ methods into two parts, for easier overriding (jeremyevans)

* Add Model.strict_param_setting, on by default, which raises errors if a missing/restricted method is called via new/set/update/etc. (jeremyevans)

* Raise errors when using association methods on objects without valid primary keys (jeremyevans)

* The model's primary key is a restricted column by default, Add model.unrestrict_primary_key to get the old behavior (jeremyevans)

* Add Model.set_(allowed|restricted)_columns, which affect which columns create/new/set/update/etc. modify (jeremyevans)

* Calls to Model.def_dataset_method with a block are cached and reapplied to the new dataset if set_dataset is called, even in a subclass (jeremyevans)

* The :reciprocal option to associations should now be the symbol name of the reciprocal association, not an instance variable symbol (jeremyevans)

* Add Model#associations, which is a hash holding a cache of associated objects, with each association being a separate key (jeremyevans)

* Make all associations support a :graph_select option, specifying a column or array of columns to select when using eager_graph (jeremyevans)

* Bring back Model#set and Model#update, now the same as Model#set_with_params and Model#update_with_params (jeremyevans)

* Allow model datasets to call to_hash without any arguments, which allows easy creation of identity maps (jeremyevans)

* Add Model.set_sti_key, for easily setting up single table inheritance (jeremyevans)

* Make all associations support a :read_only option, which doesn't add methods that modify the database (jeremyevans)

* Make *_to_many associations support a :limit option, for specifying a limit to the resulting records (and possibly an offset) (jeremyevans)

* Make association block argument and :eager option affect the _dataset method (jeremyevans)
