@@ -1,8 +1,7 @@
 require File.join(File.dirname(__FILE__), "spec_helper")
 
 describe Sequel::Model, "caching" do
-
-  before(:each) do
+  before do
     MODEL_DB.reset
     
     @cache_class = Class.new(Hash) do
@@ -15,6 +14,7 @@ describe Sequel::Model, "caching" do
     
     @c = Class.new(Sequel::Model(:items)) do
       set_cache cache
+      def self.name; 'Item' end
       
       columns :name, :id
     end
@@ -37,35 +37,49 @@ describe Sequel::Model, "caching" do
         $sqls << delete_sql
       end
     })
+    @c2 = Class.new(@c) do
+      def self.name; 'SubItem' end
+    end
   end
   
   it "should set the model's cache store" do
     @c.cache_store.should be(@cache)
+    @c2.cache_store.should be(@cache)
   end
   
   it "should have a default ttl of 3600" do
     @c.cache_ttl.should == 3600
+    @c2.cache_ttl.should == 3600
   end
   
   it "should take a ttl option" do
     @c.set_cache @cache, :ttl => 1234
     @c.cache_ttl.should == 1234
+    Class.new(@c).cache_ttl.should == 1234
   end
   
   it "should offer a set_cache_ttl method for setting the ttl" do
     @c.cache_ttl.should == 3600
     @c.set_cache_ttl 1234
     @c.cache_ttl.should == 1234
+    Class.new(@c).cache_ttl.should == 1234
   end
   
   it "should generate a cache key appropriate to the class" do
     m = @c.new
     m.values[:id] = 1
     m.cache_key.should == "#{m.class}:1"
+    m = @c2.new
+    m.values[:id] = 1
+    m.cache_key.should == "#{m.class}:1"
     
     # custom primary key
     @c.set_primary_key :ttt
     m = @c.new
+    m.values[:ttt] = 333
+    m.cache_key.should == "#{m.class}:333"
+    c = Class.new(@c)
+    m = c.new
     m.values[:ttt] = 333
     m.cache_key.should == "#{m.class}:333"
     
@@ -76,12 +90,22 @@ describe Sequel::Model, "caching" do
     m.values[:c] = 456
     m.values[:b] = 789
     m.cache_key.should == "#{m.class}:123,789,456"
+    c = Class.new(@c)
+    m = c.new
+    m.values[:a] = 123
+    m.values[:c] = 456
+    m.values[:b] = 789
+    m.cache_key.should == "#{m.class}:123,789,456"
   end
   
   it "should raise error if attempting to generate cache_key and primary key value is null" do
     m = @c.new
     proc {m.cache_key}.should raise_error(Sequel::Error)
-    
+    m.values[:id] = 1
+    proc {m.cache_key}.should_not raise_error(Sequel::Error)
+
+    m = @c2.new
+    proc {m.cache_key}.should raise_error(Sequel::Error)
     m.values[:id] = 1
     proc {m.cache_key}.should_not raise_error(Sequel::Error)
   end
@@ -89,6 +113,8 @@ describe Sequel::Model, "caching" do
   it "should not raise error if trying to save a new record" do
     proc {@c.new(:name=>'blah').save}.should_not raise_error
     proc {@c.create(:name=>'blah')}.should_not raise_error
+    proc {@c2.new(:name=>'blah').save}.should_not raise_error
+    proc {@c2.create(:name=>'blah')}.should_not raise_error
   end
   
   it "should set the cache when reading from the database" do
@@ -99,16 +125,23 @@ describe Sequel::Model, "caching" do
     $sqls.should == ['SELECT * FROM items WHERE (id = 1) LIMIT 1']
     m.values.should == $cache_dataset_row
     @cache[m.cache_key].should == m
-    
-    # read from cache
     m2 = @c[1]
+    $sqls.should == ['SELECT * FROM items WHERE (id = 1) LIMIT 1']
+    m2.should == m
+    m2.values.should == $cache_dataset_row
+
+    $sqls.clear
+    m = @c2[1]
+    $sqls.should == ['SELECT * FROM items WHERE (id = 1) LIMIT 1']
+    m.values.should == $cache_dataset_row
+    @cache[m.cache_key].should == m
+    m2 = @c2[1]
     $sqls.should == ['SELECT * FROM items WHERE (id = 1) LIMIT 1']
     m2.should == m
     m2.values.should == $cache_dataset_row
   end
   
   it "should delete the cache when writing to the database" do
-    # fill the cache
     m = @c[1]
     @cache[m.cache_key].should == m
     
@@ -122,13 +155,31 @@ describe Sequel::Model, "caching" do
     m.save
     @cache.has_key?(m.cache_key).should be_false
     $sqls.last.should == "UPDATE items SET name = 'hey', id = 1 WHERE (id = 1)"
+
+    m = @c2[1]
+    @cache[m.cache_key].should == m
+    
+    m.update_values(:name => 'tutu')
+    @cache.has_key?(m.cache_key).should be_false
+    $sqls.last.should == "UPDATE items SET name = 'tutu' WHERE (id = 1)"
+    
+    m = @c2[1]
+    @cache[m.cache_key].should == m
+    m.name = 'hey'
+    m.save
+    @cache.has_key?(m.cache_key).should be_false
+    $sqls.last.should == "UPDATE items SET name = 'hey', id = 1 WHERE (id = 1)"
   end
   
   it "should delete the cache when deleting the record" do
-    # fill the cache
     m = @c[1]
     @cache[m.cache_key].should == m
-    
+    m.delete
+    @cache.has_key?(m.cache_key).should be_false
+    $sqls.last.should == "DELETE FROM items WHERE (id = 1)"
+
+    m = @c2[1]
+    @cache[m.cache_key].should == m
     m.delete
     @cache.has_key?(m.cache_key).should be_false
     $sqls.last.should == "DELETE FROM items WHERE (id = 1)"
@@ -138,16 +189,26 @@ describe Sequel::Model, "caching" do
     m = @c[:id => 3]
     @cache[m.cache_key].should be_nil
     $sqls.last.should == "SELECT * FROM items WHERE (id = 3) LIMIT 1"
-    
     m = @c[1]
     @cache[m.cache_key].should == m
     $sqls.should == ["SELECT * FROM items WHERE (id = 3) LIMIT 1", \
       "SELECT * FROM items WHERE (id = 1) LIMIT 1"]
-    
     @c[:id => 4]
     $sqls.should == ["SELECT * FROM items WHERE (id = 3) LIMIT 1", \
       "SELECT * FROM items WHERE (id = 1) LIMIT 1", \
       "SELECT * FROM items WHERE (id = 4) LIMIT 1"]
+
+    $sqls.clear
+    m = @c2[:id => 3]
+    @cache[m.cache_key].should be_nil
+    $sqls.last.should == "SELECT * FROM items WHERE (id = 3) LIMIT 1"
+    m = @c2[1]
+    @cache[m.cache_key].should == m
+    $sqls.should == ["SELECT * FROM items WHERE (id = 3) LIMIT 1", \
+      "SELECT * FROM items WHERE (id = 1) LIMIT 1"]
+    @c2[:id => 4]
+    $sqls.should == ["SELECT * FROM items WHERE (id = 3) LIMIT 1", \
+      "SELECT * FROM items WHERE (id = 1) LIMIT 1", \
+      "SELECT * FROM items WHERE (id = 4) LIMIT 1"]
   end
-  
 end
